--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav.sticky .menu-btn {
 .home {
   height: 100vh;
   width: 100%;
-  background: url("./Images/Background.jpg");
+  background: url("./Images/background.jpg");
   background-repeat:no-repeat;
   background-size: cover;
   background-position: center;
