--- a/photography.css
+++ b/photography.css
@@ -36,3 +36,34 @@ i{
     color: black;
     padding-right: 5px;
 }
+
+
+/* previw */
+
+/* Preview Modal */
+.preview {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+}
+
+.preview img {
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+}
+
+.preview span {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+}
